feat(all): 🚀 geeker-Admin JS初始版本
geeker-Admin JS初始版本

--- a/index.html
+++ b/index.html
@@ -100,6 +100,6 @@
         if (globalState.isDark) html.style.background = "#141414";
       }
     </script>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
